--- a/src/styles.scss
+++ b/src/styles.scss
@@ -2,3 +2,10 @@
 
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
+
+
+
+body{
+  background-color: #b6a3da4f;
+}
